# meshencoding

./: .gitignore  README.md  sftp-config.json
SIMPL3/: index.html
SIMPL3/css/: style.css
SIMPL3/js/: SIMPL3.WebMeshComponent.js  progwebmesh.js
SIMPL3/js/extra/: litegl.js  litegl_old.js
SIMPL3/shaders/: diffuseTexLargeMesh.sh
c_export/: CMakeLists.txt  Export.cpp  Export.h  Geometry.cpp  Geometry.h  alun@alunevans.info  filewriter.cc  filewriter.h  forsyth.cpp  main.cpp  makefile  tiny_obj_loader.cc  tipsify.cpp  webmesh.cpp  webmesh.h
c_export/assets/: PM01-m.mtl  emily_head.mtl
c_export/binaries/: buddha.json  buddhatestonlyinds.json  bunny.json  bunytestonlyinds.json  c_export  pm01.json
server/: index.php  sftp-config.json  upload.php  webmesh
threejs/: index.html  sftp-config.json
threejs/css/: style.css
threejs/js/: B128Loader.js  OrbitControls.js  scene.js
web/: index.html  sftp-config.json
web/assets/ben/png/: ben.json
web/assets/ben/utf/: ben.json  ben.utf8
web/assets/buddha/b128/: buddha.json
web/assets/buddha/test/: buddha.json
web/assets/buddha/utf/: buddha.json  buddha14.json  buddha8.json  buddha9.json
web/assets/bunny/b128/: bunny.b128  bunny.json
web/assets/bunny/png/: bunny.json
web/assets/bunny/utf/: bunny.json  bunny.utf8  bunnytmp.json  bunnytmp.utf8
web/assets/emily/utf/: emily.json  emily.utf8
web/assets/hand/utf/: hand.json  hand.utf8
web/css/: style.css
web/js/: MESHAPP.js  b128mesh.js  pngmesh.js  utfmesh.js
web/shaders/: diffuseTexLargeMesh.sh
webvr/: index.html
webvr/js/: scenevr.js
(+13 files in other folders)
